--- a/src/assets/styles/components/_search.scss
+++ b/src/assets/styles/components/_search.scss
@@ -2,6 +2,7 @@
     @apply flex items-center border-b-blue-100 py-2;
     input{
         width: 100%;
+        min-width: 500px;
         @apply  appearance-none border-none focus:ring-0 bg-transparent w-full text-gray-700 mr-3 py-1 px-2;
     }
 }
