--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,8 +3,7 @@ html, body { height: 100%; }
 
 body{
     font-family: 'Nunito', sans-serif;
-    background: #fff;;
-    @apply text-gray-600;
+    @apply text-gray-600 $bg-white;
 }
 
 $current-weather-container-height: auto;
@@ -12,3 +11,7 @@ $temp-title-lineheight: 110px;
 $title-line-height: 68px;
 $temp-col-font-size:2.9em;
 $header-title: 4em;
+
+$spinner: #219ebc;
+$background: #fff;
+$size: 50px;
