--- a/src/assets/styles/components/_spinner.scss
+++ b/src/assets/styles/components/_spinner.scss
@@ -1,43 +1,22 @@
 
 
-$spinner: #219ebc;
-$background: #fff;
-$size: 50px;
-
-.spinner {
-  position: absolute;
-  top: calc(50% - #{$size / 2});
-  left: calc(50% - #{$size / 2});
-  width: $size;
-  height: $size;
-  animation: spinner 0.75s linear infinite;
-
-  span {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+.spinner-cont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height:600px;
+  .spinner {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
     border-radius: 50%;
-  }
-
-  .spinner-inner-1 {
-    background: linear-gradient(to right, rgba($spinner,0) 0%,rgba($spinner,0) 50%,$spinner 51%);
-  }
-
-  .spinner-inner-2 {
-    background: linear-gradient(to top, rgba($background,0) 0%,$background 100%);
-  }
-
-  .spinner-inner-3 {
-    $offset: $size * 0.1;
-    top: $offset;
-    left: $offset;
-    width: $size - ($offset * 2);
-    height: $size - ($offset * 2);
-    background: $background;
+    width: 70px;
+    margin: auto;
+    height: 70px;
+    animation: spin 2s linear infinite;
   }
 }
 
-@keyframes spinner {
+@keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
