--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -1,4 +1,3 @@
-<div class="spinner">
-    <div class="dot1"></div>
-    <div class="dot2"></div>
+<div class="spinner-cont">
+  <div class="spinner"></div>
 </div>
